[package]
name = "p2p-tun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.10", features = ["derive"] }
libp2p = { version = "0.42", features = ["serde"] }
libp2p-swarm = { version = "0.39" }
async-std = { version = "1.6.2", features = ["attributes"] }
futures = "0.3.1"
futures-util = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
async-tun = "0.10"
bimap = "0.6"
serde = { version = "1.0", features = [ "derive"] }
serde_yaml = "0.8"
users = "0.11"
etherparse = "0.10"
cidr = "0.2"
libc = "0.2"
nix = { version = "0.26", features = [ "ioctl" ] }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
